# GameEngProject-RunBoyRun

./: CMakeLists.txt
assets/: Run.dae  Slide.dae
shaders/: anim_model.fs
src/: main.cpp  model_custom.h  skeletal_animation.cpp
